<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.stolpersteinear.MainScreenActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
            android:contentDescription="@string/contentDescription_main_screen_texture"/>

    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/contentDescription_main_screen_logo"
        android:src="@drawable/stolpersteine"
...
