<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.stolpersteinear.FavActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_local_stored_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize" />

    <!-- ListView for the stored victims and this will also be used for the widget -->
    <ListView
        android:id="@+id/listViewStored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
