...
            android:layout_toEndOf="@id/imageVictim"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <RadioButton
            android:id="@+id/saveDataSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_store_dataset_margin_start"
            android:layout_marginTop="@dimen/detail_view_store_dataset_margin_top"
            android:text="@string/detail_store_dataset"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <ImageView
            android:id="@+id/wwwImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_www_margin_start"
            android:layout_marginTop="@dimen/detail_view_www_margin_top"
            android:contentDescription="@string/contentDescription_WWW_icon"
            android:src="@drawable/www" />
...
